--- a/app/src/main/res/drawable/receiver_shape.xml
+++ b/app/src/main/res/drawable/receiver_shape.xml
@@ -7,14 +7,16 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="@android:color/white" />
+                <solid android:color="@color/receiveColor" />
             </shape>
         </rotate>
     </item>
     <item android:left="8dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners android:radius="4dp" />
+            <solid android:color="@color/receiveColor" />
+            <corners
+                android:bottomLeftRadius="15dp"
+                android:bottomRightRadius="15dp" />
         </shape>
     </item>
 
