--- a/app/src/main/res/drawable/receiver_shape_continued.xml
+++ b/app/src/main/res/drawable/receiver_shape_continued.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="8dp">
         <shape>
-            <solid android:color="@android:color/white" />
-            <corners android:radius="4dp" />
+            <solid android:color="@color/receiveColor" />
+            <corners android:radius="15dp"/>
         </shape>
     </item>
 </layer-list>
