--- a/app/src/main/res/drawable/sender_shape.xml
+++ b/app/src/main/res/drawable/sender_shape.xml
@@ -7,14 +7,16 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="@android:color/holo_green_light" />
+                <solid android:color="@color/sendColor" />
             </shape>
         </rotate>
     </item>
     <item android:right="8dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_green_light" />
-            <corners android:radius="4dp" />
+            <solid android:color="@color/sendColor" />
+            <corners
+                android:bottomLeftRadius="15dp"
+                android:bottomRightRadius="15dp" />
         </shape>
     </item>
 
