--- a/app/src/main/res/drawable/sender_shape_continued.xml
+++ b/app/src/main/res/drawable/sender_shape_continued.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:right="8dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_green_light" />
-            <corners android:radius="4dp" />
+            <solid android:color="@color/sendColor" />
+            <corners android:radius="15dp"/>
         </shape>
     </item>
 </layer-list>
