--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,24 +11,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:padding="10dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/back"
-            android:contentDescription="@string/back" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/back"
+            android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:layout_marginStart="15dp"/>
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:textSize="22sp" />
+
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/person"
+            android:background="@drawable/shape_text"
+            />
 
     </LinearLayout>
 
@@ -38,37 +47,48 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/sendLayout"
         android:layout_below="@id/toolbar"
-        android:padding="15dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@color/colorBackground"
+        android:padding="15dp" />
 
     <LinearLayout
         android:id="@+id/sendLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:padding="10dp">
+        android:background="@color/darkGrey"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:contentDescription="@string/send"
+            android:src="@drawable/emoji_icon" />
 
         <EditText
             android:id="@+id/message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:layout_weight="1"
-            android:background="@null"
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
-            android:hint="@string/enter_your_message" />
+            android:layout_weight="1"
+            android:background="@drawable/shape_dialog"
+            android:hint="@string/enter_your_message"
+            android:inputType="textMultiLine"
+            android:padding="15dp"
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/sendBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/send"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
-            app:tint="@color/colorPrimaryDark"
-            android:contentDescription="@string/send" />
+            android:contentDescription="@string/send"
+            android:src="@drawable/send"
+            app:tint="@color/colorAccent" />
 
     </LinearLayout>
 
