--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -8,12 +8,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome_back"
-        android:layout_marginBottom="30dp"
-        android:textSize="35sp"
-        android:textColor="@android:color/black"
         android:layout_above="@id/linear"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:text="@string/welcome_back"
+        android:textColor="@android:color/black"
+        android:textSize="35sp" />
 
     <LinearLayout
         android:id="@+id/linear"
