--- a/app/src/main/res/layout/sender_lyout_item.xml
+++ b/app/src/main/res/layout/sender_lyout_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
+        android:textSize="11sp"
         android:background="@drawable/date_shape"
         android:padding="4dp"
         android:visibility="gone" />
@@ -34,7 +35,8 @@
             android:layout_height="wrap_content"
             android:lineSpacingExtra="2dp"
             android:paddingBottom="4dp"
-            android:textSize="20sp"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/msg"
             android:paddingBottom="4dp"
+            android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="@+id/msg"
             app:layout_constraintTop_toBottomOf="@+id/msg" />
 
